--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.4.1",
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/native": "^7.1.8",
+    "@tanstack/query-async-storage-persister": "^5.90.10",
+    "@tanstack/react-query": "^5.90.8",
+    "@tanstack/react-query-persist-client": "^5.90.10",
+    "axios": "^1.13.2",
     "expo": "~54.0.23",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
@@ -25,20 +31,27 @@
     "moti": "^0.30.0",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "prop-types": "^15.8.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-device-info": "^15.0.1",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "^4.1.4",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "tailwindcss": "^3.4.18"
+    "tailwindcss": "^3.4.18",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
+    "@types/prop-types": "^15.7.15",
     "@types/react": "~19.1.0",
+    "@types/react-native-snap-carousel": "^3.8.12",
     "react-test-renderer": "19.1.0",
+    "twrnc": "^4.11.1",
     "typescript": "~5.9.2"
   },
   "private": true
